# gpbilby

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  requirements.yml  setup.cfg
.github/: python_test.yml
.github/workflows/: python_test.yml
examples/: config_nosignal.ini
src/gpbilby/: __init__.py  cl.py  inputs.py  likelihood.py
