[build-system]
requires = [
    "setuptools>=70.0.0",
    "wheel",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "gpbilby"
authors = [
  { name = "Gregory Ashton", email = "gregory.ashton@ligo.org" },
  { name = "Mattia Emma", email = "mattia.emma@ligo.org" },
  { name = "Ann-Kirstin Malz" }
]
maintainers = [
  { name = "Gregory Ashton", email = "gregory.ashton@ligo.org" },
  { name = "Mattia Emma", email = "mattia.emma@ligo.org" },
  { name = "Ann-Kirstin Malz" }
]
version = "0.0.2"
description = "A package to perform gravitational wave data analysis combining the Whittle likelihood with Gaussian processes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/MattiaEmma2022/sbilby"
Issues = "https://github.com/MattiaEmma2022/sbilby/issues"

[tool.setuptools_scm]
version_file = "src/gpbilby/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
