[build-system]
requires = [
    "setuptools>=70.0.0",
    "wheel",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "gpbilby"
authors = [
  { name = GPBilby Developers}
]
maintainers = [
  { name = "Gregory Ashton", email = "gregory.ashton@ligo.org" },
  { name = "Mattia Emma", email = "mattia.emma@ligo.org" },
  { name = "Ann-Kirstin Malz", email ="ann-kristin.malz@ligo.org" }
]
version = "0.0.1"
description = "A package to perform gravitational wave data analysis combining the Whittle likelihood with Gaussian processes"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/MattiaEmma2022/gpbilby"
Issues = "https://github.com/MattiaEmma2022/gpbilby/issues"

[tool.setuptools_scm]
write_to = "src/gpbilby/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[options.entry_points]
console_scripts =
    gpbilby = gpbilby:main
    gpbilby_plot = gpbilby.plot:cl_plot
